--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -23,6 +23,9 @@
             <a href="/ideas/add" class="dropdown-item">Add Idea</a>
           </div>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/users/logout">Logout</a>
+        </li>
         {{else}}
           <li class="nav-item">
             <a class="nav-link" href="/users/login">Login</a>
